--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 base = "light"
-primaryColor = "#007a33"
-backgroundColor = "#ffffff"
-secondaryBackgroundColor = "#f4f4f4"
-textColor = "#000000"
+primaryColor = "#007a33"               # Verde das legislativas
+backgroundColor = "#ffffff"            # Fundo branco
+secondaryBackgroundColor = "#f4f4f4"   # Fundo dos blocos (cinza claro)
+textColor = "#000000"                  # Texto preto
